--- a/client/src/index.css
+++ b/client/src/index.css
@@ -177,14 +177,14 @@ body {
 }
 
 .bubble {
-  max-width: 65%;
-  padding: 12px 16px;
-  border-radius: 18px;
-  background: linear-gradient(135deg, #2563eb, #1d4ed8);
-  color: white;
-  font-size: 14px;
-  box-shadow: 0 4px 20px rgba(37, 99, 235, 0.3);
-  animation: fadeIn 0.2s ease-in-out;
+    max-width: 65%;
+    padding: 12px 16px;
+    border-radius: 7px;
+    background: linear-gradient(45deg, #3c68c7, #06206b);
+    color: white;
+    font-size: 14px;
+    box-shadow: 0 4px 20px rgba(37, 99, 235, 0.3);
+    animation: fadeIn 0.2s ease-in-out;
 }
 
 .bubble span {
@@ -203,6 +203,11 @@ body {
   background: rgba(148, 163, 184, 0.1);
   padding: 6px 14px;
   border-radius: 14px;
+}
+.message-text{
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
 /* Input Area */
